--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mock-deployment
+  name: nginx-deployment
   labels:
-    app: mock
+    app: nginx
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: mock
+      app: nginx
   template:
     metadata:
       labels:
-        app: mock
+        app: nginx
     spec:
       containers:
-      - name: mock
-        image: mock:1.0.0
+      - name: nginx
+        image: nginx:1.16
         ports:
         - containerPort: 80
